# serializer version: 1
# name: test_plugin_rules_snapshot[microservice-dotnet]
  '''
  
  ### BACK-DOTNET-MS-001: Per-Service DbContext Isolation
  severity: ERROR
  scope: all EF Core DbContext classes
  rule: Each microservice MUST define its own DbContext scoped to its bounded context. Cross-service DbContext sharing is forbidden.
  threshold: max_dbcontexts_per_service=1
  example_correct: |
    public class OrderDbContext : DbContext { ... }
  example_incorrect: |
    public class SharedDbContext : DbContext { /* used by multiple services */ }
  
  ### BACK-DOTNET-MS-002: Multi-Stage Docker Container Build
  severity: ERROR
  scope: Dockerfile per service
  rule: Each microservice MUST use a multi-stage Docker build with separate SDK, publish, and runtime stages for minimal images.
  threshold: min_build_stages=3
  example_correct: |
    FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
    FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
  example_incorrect: |
    FROM mcr.microsoft.com/dotnet/sdk:8.0
    RUN dotnet publish
  
  ### BACK-DOTNET-MS-003: gRPC Proto Contract Definitions
  severity: WARNING
  scope: inter-service communication
  rule: Synchronous inter-service calls SHOULD use gRPC with shared .proto contract files in a dedicated contracts project.
  threshold: proto_location=src/Contracts/Protos/
  example_correct: |
    syntax = "proto3";
    service OrderService { ... }
  example_incorrect: |
    var client = new HttpClient();
    await client.GetAsync("http://order-service/api/orders");
  
  ### BACK-DOTNET-MS-004: MassTransit Event Handler Registration
  severity: ERROR
  scope: async messaging consumers
  rule: All asynchronous event handlers MUST be registered via MassTransit consumers with explicit queue/topic bindings.
  threshold: max_unregistered_handlers=0
  example_correct: |
    cfg.ReceiveEndpoint("order-created", e => {
        e.ConfigureConsumer<OrderCreatedConsumer>(ctx);
    });
  example_incorrect: |
    bus.Publish(new OrderCreated());
    // No consumer registration
  
  ### DB-DOTNET-MS-001: Database-Per-Service Pattern
  severity: ERROR
  scope: database provisioning
  rule: Each microservice MUST own its database or schema. No shared database tables across service boundaries.
  threshold: max_shared_tables=0
  example_correct: |
    ConnectionStrings__OrderDb=Server=db;Database=orders;
  example_incorrect: |
    ConnectionStrings__SharedDb=Server=db;Database=app;
  
  ### DB-DOTNET-MS-002: EF Core Migration Per Service
  severity: WARNING
  scope: migration scripts
  rule: Each service SHOULD manage its own EF Core migrations independently of other services.
  threshold: migrations_per_service=separate
  example_correct: |
    dotnet ef migrations add Init --project OrderService
  example_incorrect: |
    dotnet ef migrations add Init --project SharedMigrations
  
  ### CICD-DOTNET-MS-001: Independent Service Build Pipelines
  severity: ERROR
  scope: CI/CD configuration
  rule: Each microservice MUST have its own build pipeline that triggers only on changes within its directory.
  threshold: pipelines_per_service=1
  example_correct: |
    trigger:
      paths:
        - src/Services/OrderService/**
  example_incorrect: |
    trigger:
      paths:
        - src/**  # triggers on all changes
  
  ### CICD-DOTNET-MS-002: Container Image Tagging
  severity: WARNING
  scope: image registry
  rule: Built images SHOULD use semantic version tags and commit SHA for traceability. Latest-only tagging is discouraged.
  threshold: required_tags=semver,sha
  example_correct: |
    docker tag order-service:1.2.3 order-service:abc1234
  example_incorrect: |
    docker tag order-service:latest
  
  '''
# ---
# name: test_plugin_rules_snapshot[microservice-nodejs]
  '''
  
  ### BACK-NODEJS-MS-001: Express/Fastify Per-Service Application
  severity: ERROR
  scope: service entry points
  rule: Each microservice MUST have its own Express or Fastify application instance with isolated route registration.
  threshold: max_apps_per_service=1
  example_correct: |
    // order-service/src/app.ts
    const app = express();
    app.use('/orders', orderRoutes);
  example_incorrect: |
    // shared/app.ts
    const app = express();  // single app for all services
  
  ### BACK-NODEJS-MS-002: Multi-Stage Docker Container Build
  severity: ERROR
  scope: Dockerfile per service
  rule: Each microservice MUST use a multi-stage Docker build with node:alpine base image for minimal production images.
  threshold: min_build_stages=2
  example_correct: |
    FROM node:20-alpine AS builder
    FROM node:20-alpine AS runtime
  example_incorrect: |
    FROM node:20
    RUN npm install && npm start
  
  ### BACK-NODEJS-MS-003: Prisma/TypeORM Per-Service Schema Isolation
  severity: ERROR
  scope: ORM schema and client
  rule: Each microservice MUST define its own Prisma schema or TypeORM data source. Shared schemas across services are forbidden.
  threshold: max_shared_schemas=0
  example_correct: |
    // order-service/prisma/schema.prisma
    datasource db { url = env("ORDER_DB_URL") }
  example_incorrect: |
    // shared/prisma/schema.prisma
    // Single schema used by multiple services
  
  ### BACK-NODEJS-MS-004: NATS/RabbitMQ Message Broker Integration
  severity: WARNING
  scope: async messaging
  rule: Asynchronous cross-service communication SHOULD use NATS or RabbitMQ message broker with explicit topic/queue bindings.
  threshold: max_unregistered_handlers=0
  example_correct: |
    nats.subscribe('order.created', (msg) => {
      handleOrderCreated(msg.data);
    });
  example_incorrect: |
    // Direct HTTP call for async operation
    await fetch('http://payment-service/process', { method: 'POST' });
  
  ### DB-NODEJS-MS-001: Database-Per-Service Pattern
  severity: ERROR
  scope: database provisioning
  rule: Each microservice MUST own its database or schema. No shared database tables across service boundaries.
  threshold: max_shared_tables=0
  example_correct: |
    DATABASE_URL="postgresql://db/order_service_db"
  example_incorrect: |
    DATABASE_URL="postgresql://db/shared_app_db"
  
  ### DB-NODEJS-MS-002: Prisma Migration Per Service
  severity: WARNING
  scope: migration scripts
  rule: Each service SHOULD manage its own Prisma migrations independently of other services.
  threshold: migrations_per_service=separate
  example_correct: |
    npx prisma migrate deploy --schema=order-service/prisma/schema.prisma
  example_incorrect: |
    npx prisma migrate deploy --schema=shared/prisma/schema.prisma
  
  ### CICD-NODEJS-MS-001: Independent Service Build Pipelines
  severity: ERROR
  scope: CI/CD configuration
  rule: Each microservice MUST have its own build pipeline that triggers only on changes within its directory.
  threshold: pipelines_per_service=1
  example_correct: |
    trigger:
      paths:
        - services/order-service/**
  example_incorrect: |
    trigger:
      paths:
        - '**'  # triggers on all changes
  
  ### CICD-NODEJS-MS-002: Per-Service Image Tagging
  severity: WARNING
  scope: image registry
  rule: Built images SHOULD use semantic version tags and commit SHA for traceability. Latest-only tagging is discouraged.
  threshold: required_tags=semver,sha
  example_correct: |
    docker tag order-service:1.2.3 order-service:abc1234
  example_incorrect: |
    docker tag order-service:latest
  
  '''
# ---
# name: test_plugin_rules_snapshot[microservice-python]
  '''
  
  ### BACK-PYTHON-MS-001: FastAPI Per-Service Application
  severity: ERROR
  scope: service entry points
  rule: Each microservice MUST have its own FastAPI application instance with isolated routers and dependency injection.
  threshold: max_apps_per_service=1
  example_correct: |
    # order_service/main.py
    app = FastAPI(title='Order Service')
  example_incorrect: |
    # shared/main.py
    app = FastAPI()  # single app for all services
  
  ### BACK-PYTHON-MS-002: Multi-Stage Docker Container Build
  severity: ERROR
  scope: Dockerfile per service
  rule: Each microservice MUST use a multi-stage Docker build with python:slim base image for minimal production images.
  threshold: min_build_stages=2
  example_correct: |
    FROM python:3.11-slim AS builder
    FROM python:3.11-slim AS runtime
  example_incorrect: |
    FROM python:3.11
    RUN pip install -r requirements.txt
  
  ### BACK-PYTHON-MS-003: SQLAlchemy Per-Service Model Isolation
  severity: ERROR
  scope: ORM models and sessions
  rule: Each microservice MUST define its own SQLAlchemy models and session factory. Shared Base metadata across services is forbidden.
  threshold: max_shared_bases=0
  example_correct: |
    # order_service/models.py
    Base = declarative_base()
    class Order(Base): ...
  example_incorrect: |
    # shared/models.py
    class Order(SharedBase): ...  # SharedBase used by multiple services
  
  ### BACK-PYTHON-MS-004: Celery/Dramatiq Task Queue Integration
  severity: WARNING
  scope: async task processing
  rule: Asynchronous cross-service operations SHOULD use Celery or Dramatiq task queues with explicit task registration.
  threshold: max_unregistered_tasks=0
  example_correct: |
    @celery_app.task(name='orders.process_payment')
    def process_payment(order_id: str): ...
  example_incorrect: |
    # Direct HTTP call for async operation
    requests.post('http://payment-service/process', json=data)
  
  ### DB-PYTHON-MS-001: Database-Per-Service Pattern
  severity: ERROR
  scope: database provisioning
  rule: Each microservice MUST own its database or schema. No shared database tables across service boundaries.
  threshold: max_shared_tables=0
  example_correct: |
    DATABASE_URL=postgresql://db/order_service_db
  example_incorrect: |
    DATABASE_URL=postgresql://db/shared_app_db
  
  ### DB-PYTHON-MS-002: Alembic Migration Per Service
  severity: WARNING
  scope: migration scripts
  rule: Each service SHOULD manage its own Alembic migration environment independently of other services.
  threshold: migrations_per_service=separate
  example_correct: |
    alembic -c order_service/alembic.ini upgrade head
  example_incorrect: |
    alembic -c shared/alembic.ini upgrade head
  
  ### CICD-PYTHON-MS-001: Independent Service Build Pipelines
  severity: ERROR
  scope: CI/CD configuration
  rule: Each microservice MUST have its own build pipeline that triggers only on changes within its directory.
  threshold: pipelines_per_service=1
  example_correct: |
    trigger:
      paths:
        - services/order_service/**
  example_incorrect: |
    trigger:
      paths:
        - '**'  # triggers on all changes
  
  ### CICD-PYTHON-MS-002: Per-Service Image Tagging
  severity: WARNING
  scope: image registry
  rule: Built images SHOULD use semantic version tags and commit SHA for traceability. Latest-only tagging is discouraged.
  threshold: required_tags=semver,sha
  example_correct: |
    docker tag order-service:1.2.3 order-service:abc1234
  example_incorrect: |
    docker tag order-service:latest
  
  '''
# ---
# name: test_plugin_rules_snapshot[modular-monolith-dotnet]
  '''
  
  ### BACK-DOTNET-MO-001: Single DbContext with Module Schemas
  severity: ERROR
  scope: EF Core DbContext
  rule: The monolith MUST use a single DbContext with schema-based separation for different domain modules.
  threshold: max_dbcontexts=1
  example_correct: |
    public class AppDbContext : DbContext {
        modelBuilder.HasDefaultSchema("orders");
    }
  example_incorrect: |
    public class OrderDbContext : DbContext { }
    public class UserDbContext : DbContext { }
  
  ### BACK-DOTNET-MO-002: MediatR Command/Query Separation
  severity: WARNING
  scope: application layer handlers
  rule: Business operations SHOULD use MediatR for command/query separation via IRequest<T> and IRequestHandler<T>.
  threshold: min_handler_coverage=80%
  example_correct: |
    public record CreateOrderCommand : IRequest<OrderDto>;
    public class CreateOrderHandler : IRequestHandler<CreateOrderCommand, OrderDto>
  example_incorrect: |
    public class OrderController {
        public IActionResult Create() { /* inline logic */ }
    }
  
  ### BACK-DOTNET-MO-003: Layered Architecture Enforcement
  severity: ERROR
  scope: project references
  rule: The monolith MUST follow layered architecture: API -> Application -> Domain -> Infrastructure. No reverse dependencies allowed.
  threshold: max_reverse_deps=0
  example_correct: |
    // API references Application
    // Application references Domain
    // Infrastructure references Domain
  example_incorrect: |
    // Domain references Infrastructure
    // Circular dependency
  
  ### BACK-DOTNET-MO-004: Synchronous In-Process Communication
  severity: WARNING
  scope: module communication
  rule: Modules within the monolith SHOULD communicate via direct method calls or mediator pattern, not HTTP or message queues.
  threshold: max_http_internal_calls=0
  example_correct: |
    await _mediator.Send(new GetOrderQuery(id));
  example_incorrect: |
    await _httpClient.GetAsync("http://localhost/api/orders");
  
  ### BACK-DOTNET-MM-001: Module Boundary Enforcement via Interface Contracts
  severity: ERROR
  scope: cross-module dependencies
  rule: Each module MUST expose functionality only through public interface contracts. Direct class references across module boundaries are forbidden.
  threshold: max_boundary_violations=0
  example_correct: |
    // Orders.Contracts/IOrderService.cs
    public interface IOrderService { Task<OrderDto> GetAsync(Guid id); }
  example_incorrect: |
    // Shipping references Orders.Internal directly
    var order = new Orders.Internal.OrderEntity();
  
  ### BACK-DOTNET-MM-002: Module Assembly Isolation
  severity: WARNING
  scope: project structure
  rule: Each module SHOULD be a separate assembly (project) with explicit interface contract projects for cross-module deps.
  threshold: min_module_projects=2
  example_correct: |
    src/Modules/Orders/Orders.Core/
    src/Modules/Orders/Orders.Contracts/
  example_incorrect: |
    src/Modules/Orders/ (single project with all concerns)
  
  ### DB-DOTNET-MO-001: Unified Migration Pipeline
  severity: ERROR
  scope: database migrations
  rule: All database migrations MUST be managed through a single migration pipeline using EF Core migrations.
  threshold: migration_projects=1
  example_correct: |
    dotnet ef migrations add AddOrders --project App.Infrastructure
  example_incorrect: |
    Manual SQL scripts applied outside EF Core migration pipeline
  
  ### DB-DOTNET-MO-002: Schema-Based Module Separation
  severity: WARNING
  scope: database schema design
  rule: Domain modules SHOULD use separate database schemas within the single database for logical isolation.
  threshold: min_schemas=1
  example_correct: |
    modelBuilder.Entity<Order>().ToTable("Orders", schema: "ordering");
  example_incorrect: |
    modelBuilder.Entity<Order>().ToTable("Orders"); // default dbo schema
  
  ### CICD-DOTNET-MO-001: Unified Build Pipeline
  severity: ERROR
  scope: CI/CD configuration
  rule: The monolith MUST have a single build pipeline that compiles, tests, and packages the entire solution.
  threshold: pipeline_count=1
  example_correct: |
    dotnet build App.sln && dotnet test App.sln
  example_incorrect: |
    Separate pipelines for each project within the monolith
  
  ### CICD-DOTNET-MO-002: Solution-Level Test Execution
  severity: WARNING
  scope: test pipeline step
  rule: CI pipeline SHOULD run tests at the solution level to ensure all modules are tested together.
  threshold: test_scope=solution
  example_correct: |
    dotnet test App.sln --configuration Release
  example_incorrect: |
    dotnet test App.Api.Tests.csproj  # misses other test projects
  
  '''
# ---
# name: test_plugin_rules_snapshot[modular-monolith-nodejs]
  '''
  
  ### BACK-NODEJS-MO-001: Single Application Entry Point
  severity: ERROR
  scope: application startup
  rule: The monolith MUST have a single application entry point with centralized middleware and route registration.
  threshold: max_entry_points=1
  example_correct: |
    // src/app.ts
    const app = express();
    app.use('/api/orders', orderRoutes);
    app.use('/api/users', userRoutes);
  example_incorrect: |
    // Multiple separate Express apps running independently
    const ordersApp = express();
    const usersApp = express();
  
  ### BACK-NODEJS-MO-002: Shared Prisma Schema Definition
  severity: WARNING
  scope: ORM schema
  rule: All domain models SHOULD be defined in a single Prisma schema file for unified migration management.
  threshold: max_schemas=1
  example_correct: |
    // prisma/schema.prisma
    model Order { id Int @id }
    model User { id Int @id }
  example_incorrect: |
    // prisma/order.prisma and prisma/user.prisma
    // Separate schema files causing migration conflicts
  
  ### BACK-NODEJS-MO-003: Layered Directory Structure
  severity: ERROR
  scope: project organization
  rule: The monolith MUST follow layered architecture with separate directories for routes, services, models, and middleware.
  threshold: required_layers=routes,services,models
  example_correct: |
    src/routes/orderRoutes.ts
    src/services/orderService.ts
    src/models/order.ts
  example_incorrect: |
    src/orders.ts  // mixes routes, logic, and data access
  
  ### BACK-NODEJS-MO-004: Synchronous In-Process Communication
  severity: WARNING
  scope: module interaction
  rule: Modules within the monolith SHOULD communicate via direct function calls or service injection, not HTTP or message queues.
  threshold: max_internal_http_calls=0
  example_correct: |
    const order = await orderService.getOrder(id);
  example_incorrect: |
    const order = await fetch(`http://localhost/api/orders/${id}`);
  
  ### BACK-NODEJS-MM-001: Module Boundary Enforcement via Interface Contracts
  severity: ERROR
  scope: cross-module imports
  rule: Each module MUST expose functionality only through public interface contracts (TypeScript interfaces/types). Direct imports of internal module files are forbidden.
  threshold: max_boundary_violations=0
  example_correct: |
    // modules/orders/contracts/index.ts
    export interface IOrderService {
      getOrder(id: string): Promise<OrderDTO>;
    }
  example_incorrect: |
    // modules/shipping/service.ts
    import { OrderEntity } from '../orders/internal/entities';
  
  ### BACK-NODEJS-MM-002: Module Package Isolation
  severity: WARNING
  scope: package structure
  rule: Each module SHOULD be a self-contained directory with explicit index.ts barrel exports and internal subdirectories.
  threshold: min_module_dirs=2
  example_correct: |
    modules/orders/index.ts  // public API barrel
    modules/orders/internal/  // private implementation
  example_incorrect: |
    modules/orders.ts  // flat file, no encapsulation
  
  ### DB-NODEJS-MO-001: Unified Migration Pipeline
  severity: ERROR
  scope: database migrations
  rule: All database migrations MUST be managed through a single Prisma migration pipeline.
  threshold: migration_schemas=1
  example_correct: |
    npx prisma migrate deploy
  example_incorrect: |
    Multiple prisma schema files with separate migration dirs
  
  ### DB-NODEJS-MO-002: Schema-Based Module Separation
  severity: WARNING
  scope: database schema design
  rule: Domain modules SHOULD use naming prefixes or PostgreSQL schemas within the single database for logical isolation.
  threshold: min_prefixes=1
  example_correct: |
    model OrdersOrder {
      @@map("orders_orders")
    }
  example_incorrect: |
    model Order {
      @@map("orders")  // generic name, no module prefix
    }
  
  ### CICD-NODEJS-MO-001: Unified Build Pipeline
  severity: ERROR
  scope: CI/CD configuration
  rule: The monolith MUST have a single build pipeline that runs linting, tests, and build for the entire project.
  threshold: pipeline_count=1
  example_correct: |
    npm ci && npm run lint && npm test && npm run build
  example_incorrect: |
    Separate pipelines for each module within the monolith
  
  ### CICD-NODEJS-MO-002: Full Test Suite Execution
  severity: WARNING
  scope: test pipeline step
  rule: CI pipeline SHOULD run the complete test suite to ensure all modules are tested together.
  threshold: test_scope=full
  example_correct: |
    npm test  # runs all tests
  example_incorrect: |
    npm test -- --testPathPattern=orders  # misses other modules
  
  '''
# ---
# name: test_plugin_rules_snapshot[modular-monolith-python]
  '''
  
  ### BACK-PYTHON-MO-001: Single Application Entry Point
  severity: ERROR
  scope: application startup
  rule: The monolith MUST have a single application entry point with centralized configuration and middleware registration.
  threshold: max_entry_points=1
  example_correct: |
    # app/main.py
    app = FastAPI(title='MyApp')
    app.include_router(orders.router)
  example_incorrect: |
    # Multiple separate FastAPI apps running independently
    orders_app = FastAPI()
    payments_app = FastAPI()
  
  ### BACK-PYTHON-MO-002: Shared SQLAlchemy Model Base
  severity: WARNING
  scope: ORM model definitions
  rule: All domain models SHOULD inherit from a single SQLAlchemy declarative Base for unified migration management.
  threshold: max_bases=1
  example_correct: |
    # app/models/base.py
    Base = declarative_base()
    # app/models/order.py
    class Order(Base): ...
  example_incorrect: |
    OrderBase = declarative_base()
    UserBase = declarative_base()  # separate bases
  
  ### BACK-PYTHON-MO-003: Layered Package Structure
  severity: ERROR
  scope: package organization
  rule: The monolith MUST follow layered architecture with separate packages for API, services, models, and repositories.
  threshold: required_layers=api,services,models
  example_correct: |
    app/api/routes.py
    app/services/order_service.py
    app/models/order.py
  example_incorrect: |
    app/orders.py  # mixes routes, logic, and data access
  
  ### BACK-PYTHON-MO-004: Synchronous In-Process Communication
  severity: WARNING
  scope: module interaction
  rule: Modules within the monolith SHOULD communicate via direct function calls or service layer methods, not HTTP or queues.
  threshold: max_internal_http_calls=0
  example_correct: |
    result = order_service.get_order(order_id)
  example_incorrect: |
    result = httpx.get(f'http://localhost/api/orders/{order_id}')
  
  ### BACK-PYTHON-MM-001: Module Boundary Enforcement via Interface Contracts
  severity: ERROR
  scope: cross-module imports
  rule: Each module MUST expose functionality only through public interface contracts (Protocol classes or ABCs). Direct imports of internal module classes are forbidden.
  threshold: max_boundary_violations=0
  example_correct: |
    # modules/orders/contracts.py
    class OrderServiceProtocol(Protocol):
        def get_order(self, id: str) -> OrderDTO: ...
  example_incorrect: |
    # modules/shipping/service.py
    from modules.orders.internal.models import Order  # direct import
  
  ### BACK-PYTHON-MM-002: Module Package Isolation
  severity: WARNING
  scope: package structure
  rule: Each module SHOULD be a self-contained Python package with explicit __init__.py exports and internal subpackages.
  threshold: min_module_packages=2
  example_correct: |
    modules/orders/__init__.py  # public API only
    modules/orders/internal/  # private implementation
  example_incorrect: |
    modules/orders.py  # flat file, no encapsulation
  
  ### DB-PYTHON-MO-001: Unified Alembic Migration Pipeline
  severity: ERROR
  scope: database migrations
  rule: All database migrations MUST be managed through a single Alembic migration environment.
  threshold: migration_envs=1
  example_correct: |
    alembic upgrade head  # single migration env
  example_incorrect: |
    Multiple alembic.ini files for different modules
  
  ### DB-PYTHON-MO-002: Schema-Based Module Separation
  severity: WARNING
  scope: database schema design
  rule: Domain modules SHOULD use separate database schemas within the single database for logical isolation.
  threshold: min_schemas=1
  example_correct: |
    class Order(Base):
        __table_args__ = {"schema": "ordering"}
  example_incorrect: |
    class Order(Base):
        __tablename__ = "orders"  # default public schema
  
  ### CICD-PYTHON-MO-001: Unified Build Pipeline
  severity: ERROR
  scope: CI/CD configuration
  rule: The monolith MUST have a single build pipeline that runs linting, tests, and packaging for the entire project.
  threshold: pipeline_count=1
  example_correct: |
    pip install -e . && pytest && ruff check .
  example_incorrect: |
    Separate pipelines for each module within the monolith
  
  ### CICD-PYTHON-MO-002: Full Test Suite Execution
  severity: WARNING
  scope: test pipeline step
  rule: CI pipeline SHOULD run the complete pytest suite to ensure all modules are tested together.
  threshold: test_scope=full
  example_correct: |
    pytest tests/ --cov=app
  example_incorrect: |
    pytest tests/orders/  # misses other modules
  
  '''
# ---
# name: test_plugin_rules_snapshot[monolithic-dotnet]
  '''
  
  ### BACK-DOTNET-MO-001: Single DbContext with Module Schemas
  severity: ERROR
  scope: EF Core DbContext
  rule: The monolith MUST use a single DbContext with schema-based separation for different domain modules.
  threshold: max_dbcontexts=1
  example_correct: |
    public class AppDbContext : DbContext {
        modelBuilder.HasDefaultSchema("orders");
    }
  example_incorrect: |
    public class OrderDbContext : DbContext { }
    public class UserDbContext : DbContext { }
  
  ### BACK-DOTNET-MO-002: MediatR Command/Query Separation
  severity: WARNING
  scope: application layer handlers
  rule: Business operations SHOULD use MediatR for command/query separation via IRequest<T> and IRequestHandler<T>.
  threshold: min_handler_coverage=80%
  example_correct: |
    public record CreateOrderCommand : IRequest<OrderDto>;
    public class CreateOrderHandler : IRequestHandler<CreateOrderCommand, OrderDto>
  example_incorrect: |
    public class OrderController {
        public IActionResult Create() { /* inline logic */ }
    }
  
  ### BACK-DOTNET-MO-003: Layered Architecture Enforcement
  severity: ERROR
  scope: project references
  rule: The monolith MUST follow layered architecture: API -> Application -> Domain -> Infrastructure. No reverse dependencies allowed.
  threshold: max_reverse_deps=0
  example_correct: |
    // API references Application
    // Application references Domain
    // Infrastructure references Domain
  example_incorrect: |
    // Domain references Infrastructure
    // Circular dependency
  
  ### BACK-DOTNET-MO-004: Synchronous In-Process Communication
  severity: WARNING
  scope: module communication
  rule: Modules within the monolith SHOULD communicate via direct method calls or mediator pattern, not HTTP or message queues.
  threshold: max_http_internal_calls=0
  example_correct: |
    await _mediator.Send(new GetOrderQuery(id));
  example_incorrect: |
    await _httpClient.GetAsync("http://localhost/api/orders");
  
  ### DB-DOTNET-MO-001: Unified Migration Pipeline
  severity: ERROR
  scope: database migrations
  rule: All database migrations MUST be managed through a single migration pipeline using EF Core migrations.
  threshold: migration_projects=1
  example_correct: |
    dotnet ef migrations add AddOrders --project App.Infrastructure
  example_incorrect: |
    Manual SQL scripts applied outside EF Core migration pipeline
  
  ### DB-DOTNET-MO-002: Schema-Based Module Separation
  severity: WARNING
  scope: database schema design
  rule: Domain modules SHOULD use separate database schemas within the single database for logical isolation.
  threshold: min_schemas=1
  example_correct: |
    modelBuilder.Entity<Order>().ToTable("Orders", schema: "ordering");
  example_incorrect: |
    modelBuilder.Entity<Order>().ToTable("Orders"); // default dbo schema
  
  ### CICD-DOTNET-MO-001: Unified Build Pipeline
  severity: ERROR
  scope: CI/CD configuration
  rule: The monolith MUST have a single build pipeline that compiles, tests, and packages the entire solution.
  threshold: pipeline_count=1
  example_correct: |
    dotnet build App.sln && dotnet test App.sln
  example_incorrect: |
    Separate pipelines for each project within the monolith
  
  ### CICD-DOTNET-MO-002: Solution-Level Test Execution
  severity: WARNING
  scope: test pipeline step
  rule: CI pipeline SHOULD run tests at the solution level to ensure all modules are tested together.
  threshold: test_scope=solution
  example_correct: |
    dotnet test App.sln --configuration Release
  example_incorrect: |
    dotnet test App.Api.Tests.csproj  # misses other test projects
  
  '''
# ---
# name: test_plugin_rules_snapshot[monolithic-nodejs]
  '''
  
  ### BACK-NODEJS-MO-001: Single Application Entry Point
  severity: ERROR
  scope: application startup
  rule: The monolith MUST have a single application entry point with centralized middleware and route registration.
  threshold: max_entry_points=1
  example_correct: |
    // src/app.ts
    const app = express();
    app.use('/api/orders', orderRoutes);
    app.use('/api/users', userRoutes);
  example_incorrect: |
    // Multiple separate Express apps running independently
    const ordersApp = express();
    const usersApp = express();
  
  ### BACK-NODEJS-MO-002: Shared Prisma Schema Definition
  severity: WARNING
  scope: ORM schema
  rule: All domain models SHOULD be defined in a single Prisma schema file for unified migration management.
  threshold: max_schemas=1
  example_correct: |
    // prisma/schema.prisma
    model Order { id Int @id }
    model User { id Int @id }
  example_incorrect: |
    // prisma/order.prisma and prisma/user.prisma
    // Separate schema files causing migration conflicts
  
  ### BACK-NODEJS-MO-003: Layered Directory Structure
  severity: ERROR
  scope: project organization
  rule: The monolith MUST follow layered architecture with separate directories for routes, services, models, and middleware.
  threshold: required_layers=routes,services,models
  example_correct: |
    src/routes/orderRoutes.ts
    src/services/orderService.ts
    src/models/order.ts
  example_incorrect: |
    src/orders.ts  // mixes routes, logic, and data access
  
  ### BACK-NODEJS-MO-004: Synchronous In-Process Communication
  severity: WARNING
  scope: module interaction
  rule: Modules within the monolith SHOULD communicate via direct function calls or service injection, not HTTP or message queues.
  threshold: max_internal_http_calls=0
  example_correct: |
    const order = await orderService.getOrder(id);
  example_incorrect: |
    const order = await fetch(`http://localhost/api/orders/${id}`);
  
  ### DB-NODEJS-MO-001: Unified Migration Pipeline
  severity: ERROR
  scope: database migrations
  rule: All database migrations MUST be managed through a single Prisma migration pipeline.
  threshold: migration_schemas=1
  example_correct: |
    npx prisma migrate deploy
  example_incorrect: |
    Multiple prisma schema files with separate migration dirs
  
  ### DB-NODEJS-MO-002: Schema-Based Module Separation
  severity: WARNING
  scope: database schema design
  rule: Domain modules SHOULD use naming prefixes or PostgreSQL schemas within the single database for logical isolation.
  threshold: min_prefixes=1
  example_correct: |
    model OrdersOrder {
      @@map("orders_orders")
    }
  example_incorrect: |
    model Order {
      @@map("orders")  // generic name, no module prefix
    }
  
  ### CICD-NODEJS-MO-001: Unified Build Pipeline
  severity: ERROR
  scope: CI/CD configuration
  rule: The monolith MUST have a single build pipeline that runs linting, tests, and build for the entire project.
  threshold: pipeline_count=1
  example_correct: |
    npm ci && npm run lint && npm test && npm run build
  example_incorrect: |
    Separate pipelines for each module within the monolith
  
  ### CICD-NODEJS-MO-002: Full Test Suite Execution
  severity: WARNING
  scope: test pipeline step
  rule: CI pipeline SHOULD run the complete test suite to ensure all modules are tested together.
  threshold: test_scope=full
  example_correct: |
    npm test  # runs all tests
  example_incorrect: |
    npm test -- --testPathPattern=orders  # misses other modules
  
  '''
# ---
# name: test_plugin_rules_snapshot[monolithic-python]
  '''
  
  ### BACK-PYTHON-MO-001: Single Application Entry Point
  severity: ERROR
  scope: application startup
  rule: The monolith MUST have a single application entry point with centralized configuration and middleware registration.
  threshold: max_entry_points=1
  example_correct: |
    # app/main.py
    app = FastAPI(title='MyApp')
    app.include_router(orders.router)
  example_incorrect: |
    # Multiple separate FastAPI apps running independently
    orders_app = FastAPI()
    payments_app = FastAPI()
  
  ### BACK-PYTHON-MO-002: Shared SQLAlchemy Model Base
  severity: WARNING
  scope: ORM model definitions
  rule: All domain models SHOULD inherit from a single SQLAlchemy declarative Base for unified migration management.
  threshold: max_bases=1
  example_correct: |
    # app/models/base.py
    Base = declarative_base()
    # app/models/order.py
    class Order(Base): ...
  example_incorrect: |
    OrderBase = declarative_base()
    UserBase = declarative_base()  # separate bases
  
  ### BACK-PYTHON-MO-003: Layered Package Structure
  severity: ERROR
  scope: package organization
  rule: The monolith MUST follow layered architecture with separate packages for API, services, models, and repositories.
  threshold: required_layers=api,services,models
  example_correct: |
    app/api/routes.py
    app/services/order_service.py
    app/models/order.py
  example_incorrect: |
    app/orders.py  # mixes routes, logic, and data access
  
  ### BACK-PYTHON-MO-004: Synchronous In-Process Communication
  severity: WARNING
  scope: module interaction
  rule: Modules within the monolith SHOULD communicate via direct function calls or service layer methods, not HTTP or queues.
  threshold: max_internal_http_calls=0
  example_correct: |
    result = order_service.get_order(order_id)
  example_incorrect: |
    result = httpx.get(f'http://localhost/api/orders/{order_id}')
  
  ### DB-PYTHON-MO-001: Unified Alembic Migration Pipeline
  severity: ERROR
  scope: database migrations
  rule: All database migrations MUST be managed through a single Alembic migration environment.
  threshold: migration_envs=1
  example_correct: |
    alembic upgrade head  # single migration env
  example_incorrect: |
    Multiple alembic.ini files for different modules
  
  ### DB-PYTHON-MO-002: Schema-Based Module Separation
  severity: WARNING
  scope: database schema design
  rule: Domain modules SHOULD use separate database schemas within the single database for logical isolation.
  threshold: min_schemas=1
  example_correct: |
    class Order(Base):
        __table_args__ = {"schema": "ordering"}
  example_incorrect: |
    class Order(Base):
        __tablename__ = "orders"  # default public schema
  
  ### CICD-PYTHON-MO-001: Unified Build Pipeline
  severity: ERROR
  scope: CI/CD configuration
  rule: The monolith MUST have a single build pipeline that runs linting, tests, and packaging for the entire project.
  threshold: pipeline_count=1
  example_correct: |
    pip install -e . && pytest && ruff check .
  example_incorrect: |
    Separate pipelines for each module within the monolith
  
  ### CICD-PYTHON-MO-002: Full Test Suite Execution
  severity: WARNING
  scope: test pipeline step
  rule: CI pipeline SHOULD run the complete pytest suite to ensure all modules are tested together.
  threshold: test_scope=full
  example_correct: |
    pytest tests/ --cov=app
  example_incorrect: |
    pytest tests/orders/  # misses other modules
  
  '''
# ---
